# smarturl

./: .gitignore  README.md  pyproject.toml
Carrusel/: manage.py
Carrusel/Carrusel/: asgi.py  db.py  settings.py  urls.py  views.py  wsgi.py
Carrusel/business/: admin.py  apps.py  form.py  models.py  urls.py  views.py
Carrusel/business/static/plugins/dark/: asd.js
Carrusel/business/templates/: Error.html  base.html  carrousel.html  createCampana.html  createMultimedia.html  footer.html  home.html  navbar.html  sidebar.html  wrapper.html
Carrusel/business/templates/business/: campana_confirm_delete.html  campana_form.html  campana_list.html  empresa_list.html  multimedia_confirm_delete.html  multimedia_form.html  multimedia_list.html  paquete_list.html
Carrusel/members/: form.py  urls.py  views.py
Carrusel/members/templates/: base.html
Carrusel/members/templates/registration/: login.html  register.html
